[gd_scene load_steps=29 format=3 uid="uid://vmliqn78631u"]

[ext_resource type="Script" path="res://Audio/GD_SFXOther.gd" id="1_wsfow"]
[ext_resource type="AudioStream" uid="uid://h78ugsvxhc76" path="res://Audio/Card/CardCardHover1.ogg" id="2_cdbka"]
[ext_resource type="AudioStream" uid="uid://wvtddy3fu7qj" path="res://Audio/Card/CardCardHover2.ogg" id="3_7itb0"]
[ext_resource type="AudioStream" uid="uid://bqawarpgb23xp" path="res://Audio/Card/CardCardHover3.ogg" id="4_yolpd"]
[ext_resource type="AudioStream" uid="uid://d2wcdlsb1fbw5" path="res://Audio/Card/CardCardHover4.ogg" id="5_rrrwr"]
[ext_resource type="AudioStream" uid="uid://cvq0t1pgduquv" path="res://Audio/Card/CardCardHover5.ogg" id="6_p4alm"]
[ext_resource type="AudioStream" uid="uid://hgg4x371e3t5" path="res://Audio/Card/CardCardHover6.ogg" id="7_aiuho"]
[ext_resource type="AudioStream" uid="uid://bhr38mo8v1ag8" path="res://Audio/Card/CardCardHover7.ogg" id="8_lptow"]
[ext_resource type="AudioStream" uid="uid://ci0lanuagp10t" path="res://Audio/Card/CardCardHover8.ogg" id="9_5qtf4"]
[ext_resource type="AudioStream" uid="uid://c3124wagi6dy1" path="res://Audio/Card/CardCardHover9.ogg" id="10_coggh"]
[ext_resource type="AudioStream" uid="uid://b838rmfbtq2ml" path="res://Audio/Card/CardCardHover10.ogg" id="11_jjxko"]
[ext_resource type="AudioStream" uid="uid://d3cm4nhjguf70" path="res://Audio/Karma/VFXKarmaBlipMid.ogg" id="12_lk3b0"]
[ext_resource type="AudioStream" uid="uid://bie8ktf2o0l7x" path="res://Audio/Karma/VFXKarmaBlipDroplet1.ogg" id="13_lrouo"]
[ext_resource type="AudioStream" uid="uid://bhkh3rtovmwqt" path="res://Audio/Karma/VFXKarmaBlipDroplet2.ogg" id="14_54u87"]
[ext_resource type="AudioStream" uid="uid://c0ajpj4a2820h" path="res://Audio/Karma/VFXKarmaBlipDroplet3.ogg" id="15_1g0f6"]
[ext_resource type="AudioStream" uid="uid://d25daj52x2b40" path="res://Audio/Karma/VFXKarmaBlipDroplet4.ogg" id="16_eba8r"]
[ext_resource type="AudioStream" uid="uid://cf5sr17251g43" path="res://Audio/UI/UIButtonHover1.ogg" id="17_wqur1"]
[ext_resource type="AudioStream" uid="uid://40lty7jni8fj" path="res://Audio/UI/UIButtonHover2.ogg" id="18_y42my"]
[ext_resource type="AudioStream" uid="uid://cyy18xxoji4la" path="res://Audio/UI/UIButtonHover3.ogg" id="19_gonrv"]
[ext_resource type="AudioStream" uid="uid://cymksahy13knc" path="res://Audio/UI/UIButtonPress.ogg" id="20_eet8d"]
[ext_resource type="AudioStream" uid="uid://cxxg00ium5xfl" path="res://Audio/Card/CardHoverLoop3.ogg" id="21_36cxs"]
[ext_resource type="AudioStream" uid="uid://b6l7socdfl0tx" path="res://Audio/Card/PlayerDamage.ogg" id="22_6gxm1"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sqnrc"]
random_pitch = 1.25
random_volume_offset_db = 2.0
streams_count = 10
stream_0/stream = ExtResource("2_cdbka")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_7itb0")
stream_1/weight = 1.0
stream_2/stream = ExtResource("4_yolpd")
stream_2/weight = 1.0
stream_3/stream = ExtResource("5_rrrwr")
stream_3/weight = 1.0
stream_4/stream = ExtResource("6_p4alm")
stream_4/weight = 1.0
stream_5/stream = ExtResource("7_aiuho")
stream_5/weight = 1.0
stream_6/stream = ExtResource("8_lptow")
stream_6/weight = 1.0
stream_7/stream = ExtResource("9_5qtf4")
stream_7/weight = 1.0
stream_8/stream = ExtResource("10_coggh")
stream_8/weight = 1.0
stream_9/stream = ExtResource("11_jjxko")
stream_9/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sphk5"]
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("12_lk3b0")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_f3wda"]
random_pitch = 1.1
streams_count = 4
stream_0/stream = ExtResource("13_lrouo")
stream_0/weight = 1.0
stream_1/stream = ExtResource("14_54u87")
stream_1/weight = 1.0
stream_2/stream = ExtResource("15_1g0f6")
stream_2/weight = 1.0
stream_3/stream = ExtResource("16_eba8r")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6ga3n"]
streams_count = 3
stream_0/stream = ExtResource("17_wqur1")
stream_0/weight = 1.0
stream_1/stream = ExtResource("18_y42my")
stream_1/weight = 1.0
stream_2/stream = ExtResource("19_gonrv")
stream_2/weight = 1.0

[sub_resource type="Animation" id="Animation_7hayh"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-64.0, 6.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tnftf"]
_data = {
"Fade": SubResource("Animation_7hayh")
}

[node name="SFXOther" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wsfow")

[node name="Draw" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sqnrc")
volume_db = -3.0
pitch_scale = 1.25
max_polyphony = 4
bus = &"SFXSound"

[node name="HandOpen" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sqnrc")
volume_db = -3.0
pitch_scale = 1.25
max_polyphony = 4
bus = &"SFXSound"

[node name="HandClose" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sqnrc")
volume_db = -3.0
pitch_scale = 1.25
max_polyphony = 4
bus = &"SFXSound"

[node name="HandCardHover" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sqnrc")
volume_db = -3.0
pitch_scale = 1.25
max_polyphony = 4
bus = &"SFXSound"

[node name="KarmaPlayerBlip" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sphk5")
max_polyphony = 8
bus = &"VFX"

[node name="KarmaPlayerDroplet" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_f3wda")
pitch_scale = 0.75
max_polyphony = 8
bus = &"VFX"

[node name="UiButtonHover" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_6ga3n")
bus = &"SFXUi"

[node name="UiButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_eet8d")
bus = &"SFXUi"

[node name="PlacableHover" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_6ga3n")
max_polyphony = 3
bus = &"SFXUi"

[node name="PlacableHoverLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_36cxs")
volume_db = -64.0
bus = &"SFXUi"

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlacableHoverLoop"]
libraries = {
"": SubResource("AnimationLibrary_tnftf")
}

[node name="Damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_6gxm1")
volume_db = -3.0
max_polyphony = 4
bus = &"SFXSound"
